счет по умолчанию

--- a/components/ItemsTable1/styles.module.css
+++ b/components/ItemsTable1/styles.module.css
@@ -1,6 +1,8 @@
 .container {
   display: inline-block;
-  overflow: auto
+  overflow: auto;
+  border: 1px solid green;
+  height: 100%;
 }
 
 .container table th {
